fdo#67489: Don't stop range search even when the first cell is empty.

Because we aren't supposed to. Think of those formula cells that follow
the empty one.

Change-Id: I2cd04833d5e6c561e9ab6d83a984dbdceefa2e71